<resources>
    <string name="app_name">MicroProject_01_Snake</string>
    <string name="startscreen_title">S N A K E</string>


    <!-- Start View -->
    <string name="start_button_start_text">start</string>
    <string name="title_activity_game_view">gameView</string>

    <string name="start_text_view_high_score">highscore</string>
    <string name="start_text_view_last_score">lastscore</string>
    <string name="start_text_view_high_score_value" />
    <string name="start_text_view_last_score_value" />


    <!-- Start View Options -->
    <string name="action_settings">settings</string>
    <string name="background_color_text">background color</string>
    <string name="snake_head_color_text">head color</string>
    <string name="snake_body_color_text">body color</string>
    <string name="snake_eye_color_text">eye color</string>
    <string name="snake_foot_color_text">fruit color</string>
    <string name="action_settings_reset">reset settings</string>
    <string name="action_settings_placeholder">-</string>

    <!-- Game View -->
    <string name="game_text_view_score">score</string>
    <string name="game_toast_start_the_game">press looong to start</string>
    <string name="game_toast_go_on_pause">press looong to pause</string>

    <!-- Settings -->
    <string name="title_activity_settings">settings</string>

    <string name="options_text_view_control">movement control</string>
    <string name="options_text_view_control_invert">invert movement control</string>

    <string name="options_text_view_takeoffspeed">lift-off speed</string>
    <string name="options_text_view_severity_1">easy</string>
    <string name="options_text_view_severity_2">medium</string>
    <string name="options_text_view_severity_3">ohh</string>
    <string name="options_text_view_severity_4">you are really cool man</string>

    <string name="options_text_view_snake_size">size of the snake</string>

    <string name="options_text_view_play_sound">play sound for eating</string>

    <!-- Color Picker Dialog -->
    <string name="color_picker_dialog_background">set background color</string>
    <string name="color_picker_dialog_head">set head color</string>
    <string name="color_picker_dialog_body">set body color</string>
    <string name="color_picker_dialog_eye">set eye color</string>
    <string name="color_picker_dialog_fruit">set fruit color</string>

    <!-- GameView Fragment -->
    <string name="game_view_fragment_negative">back</string>
    <string name="game_view_fragment_positive">continue</string>
    <string name="game_view_fragment_text">game over!!</string>

    <!-- StartView Fragment -->
    <string name="start_view_fragment_negative">nothing</string>
    <string name="start_view_fragment_neutral">only colors</string>
    <string name="start_view_fragment_positive">also highscores</string>
    <string name="start_view_fragment_text">reset colors and highscores?</string>



</resources>
