<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartScreen">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/background_color"
        android:orderInCategory="100"
        android:title="@string/background_color_text" />
    <item
        android:id="@+id/snake_head_color"
        android:orderInCategory="100"
        android:title="@string/snake_head_color_text" />
    <item
        android:id="@+id/snake_body_color"
        android:orderInCategory="100"
        android:title="@string/snake_body_color_text" />
    <item
        android:id="@+id/snake_eye_color"
        android:orderInCategory="100"
        android:title="@string/snake_eye_color_text" />
    <item
        android:id="@+id/snake_foot_color"
        android:orderInCategory="100"
        android:title="@string/snake_foot_color_text" />

    <item
        android:id="@+id/action_settings_placeholder"
        android:orderInCategory="100"
        android:title="@string/action_settings_placeholder" />
    <item
        android:id="@+id/action_settings_reset"
        android:orderInCategory="100"
        android:title="@string/action_settings_reset" />
</menu>
